--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
+  "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-i18n": "4.10.1",
-    "@strapi/plugin-users-permissions": "4.10.1",
-    "@strapi/strapi": "4.10.1",
+    "@strapi/strapi": "4.10.2",
+    "@strapi/plugin-users-permissions": "4.10.2",
+    "@strapi/plugin-i18n": "4.10.2",
     "better-sqlite3": "8.0.1"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "ed2e6e44-c7de-470d-8760-d2e282b2b11a"
+    "uuid": "eba90610-c610-4dd2-b73f-9dcaf8ba1527"
   },
   "engines": {
     "node": ">=14.19.1 <=18.x.x",
