--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "blog-cms",
-  "packageManager": "yarn@3.4.1",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
-    "install": "yarn install",
+    "install": "npm install",
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
