--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,10 +2,23 @@
   "name": "HallB Blog Backend",
   "dockerFile": "./dev-environment/Dockerfile",
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-  "portsAttributes": {
-    "9000": {
-      "label": "Hello Remote World",
-      "onAutoForward": "notify"
+  "containerEnv": {
+    "NODE_ENV": "development",
+    "POSTGRES_DB": "strapi",
+    "DATABASE_NAME": "strapi",
+    "DATABASE_USERNAME": "postgres",
+    "DATABASE_PASSWORD": "kGmYjLYjtk%6",
+    "POSTGRES_PASSWORD": "kGmYjLYjtk%6",
+    "DATABASE_CLIENT": "postgres",
+    "APP_KEYS": "NUupEY*f3eBc,jL&of64#jj^e",
+    "JWT_SECRET": "5pAYZBhtctuNBp9BppIFDA==",
+    "API_TOKEN_SALT": "ioXoevZ9bjVhvVgjhPqwdQ==",
+    "ADMIN_JWT_SECRET": "PyRLq6EvmIAFl4WuraxCqg=="
+  },
+  "postStartCommand": "sudo supervisord &",
+  "customizations": {
+    "vscode": {
+      "extensions": ["ms-ossdata.vscode-postgresql"]
     }
   }
 }
