--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "version": "0.1.0",
   "description": "A Strapi application",
   "scripts": {
+    "install": "npm install",
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/pg": "^8.6.6"
+  },
   "dependencies": {
-    "@strapi/strapi": "4.10.2",
-    "@strapi/plugin-users-permissions": "4.10.2",
     "@strapi/plugin-i18n": "4.10.2",
-    "better-sqlite3": "8.0.1"
+    "@strapi/plugin-users-permissions": "4.10.2",
+    "@strapi/strapi": "4.10.2",
+    "better-sqlite3": "8.0.1",
+    "pg": "^8.10.0"
   },
   "author": {
     "name": "A Strapi developer"
